# HooRay-Relay

./: .dockerignore  .envrc.example  .gitignore  .samignore  CONTRACT_CONFIRMATION_LIST.md  Cargo.toml  ENGINEER_1_TIMELINE.md  Makefile  PROJECT_DICTIONARY.md  README.md  samconfig.local.toml.example  samconfig.prod.toml  samconfig.staging.toml  samconfig.toml  template.yaml
.github/env/: README.md  dev.env  dev.env.example  dev.secrets.env.example  prod.env  prod.env.example  prod.secrets.env.example  staging.env  staging.env.example
.github/workflows/: deploy.yml  rust.yml  sam.yml  worker-image-pr.yml
artifacts/day9/day9_20260306_163035/: env.snapshot  k6-summary.json  meta.env
artifacts/day9/day9_20260306_163121/: k6-summary.json  meta.env
artifacts/day9/day9_baseline_20260307_010047/: env.snapshot  k6-summary.json  meta.env
artifacts/day9/day9_baseline_20260307_010139/: env.snapshot  k6-summary.json  meta.env
artifacts/day9/day9_baseline_20260307_010222/: baseline-report.md  env.snapshot  k6-summary.json  meta.env
artifacts/day9/day9_tuned_baseline_20260307_150826/: env.snapshot  k6-summary.json  meta.env  tuned-baseline-report.md
artifacts/day9/day9_tuned_baseline_lowburst_20260307_151140/: dynamodb-counts.json  env.snapshot  k6-summary.json  meta.env  (+1 more)
common/: Cargo.toml
common/src/: lib.rs
docs/: DEPLOYMENT.md  ENGINEER_1_TIMELINE.md  ENGINEER_2_TIMELINE.md  PROJECT_DICTIONARY.md  PR_COMPARISON_44_vs_45.md  WORKER_RUNTIME.md  api-spec.yaml  customer-guide.md  day9-performance-report.md  demo-day10.md  handoff-engineer2.md  networking-hardening-checklist.md  release-1.0.0-go-no-go-checklist.md  release-1.0.0-notes.md  retry-behavior.md  rollback.md  runbook.md  troubleshooting.md
infra/ecs/: README.md  deploy_worker_service.sh  task-definition.template.json  worker-task-policy.template.json
ingestion/: Cargo.toml  README.md
ingestion/src/: lib.rs  main.rs  model.rs  observability.rs
ingestion/src/handlers/: config.rs  mod.rs  webhook.rs
ingestion/src/services/: configs.rs  dynamodb.rs  events.rs  idempotency.rs  mod.rs  queue.rs  reconcile.rs
ingestion/tests/: integration_test.sh
monitoring/: README.md  ingestion-dashboard.json  worker-dashboard.json  worker-dashboard.template.json
monitoring/alarms/: worker-failure-rate.json  worker-failure-rate.template.json  worker-latency-p95.json  worker-latency-p95.template.json  worker-queue-age.template.json
scripts/: apply_worker_monitoring.sh  day9_seed_and_report.sh  deploy_dev.sh  dlq_ops.sh  e2e_day6_ingestion_observability.sh  e2e_day6_observability.sh  e2e_day6_worker_observability.sh  e2e_day8_dlq_ops.sh  e2e_ingestion_worker.sh  run_mock_server.sh  use_env.sh
scripts/lib/: artifact_utils.sh
tests/: load_test.js  mock_server.py  test_pl.md  test_report.md
worker/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.packaging
worker/src/: main.rs  model.rs  observability.rs
worker/src/resilience/: breaker.rs  mod.rs  retry.rs
worker/src/services/: delivery.rs  dynamodb.rs  mod.rs  signature.rs  sqs.rs
worker/tests/: end_to_end_test.sh  test_dynamodb.sh
