[workspace]
members = [
    "ingestion",
    "worker",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
aws-config = "1.8.14"
aws-sdk-dynamodb = "1"
aws-sdk-sqs = "1.95.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
