[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
thiserror = "2.0"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# async
tokio = { version = "1", features = ["full"] }

# web framework
axum = "0.8"

# aws-sdk
aws-config = "1.8.14"
aws-sdk-dynamodb = "1"
aws-sdk-sqs = "1.94.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

# unique ID generation
nanoid = "0.4"
