[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
# serde
serde.workspace = true
serde_json.workspace = true

# error handling
thiserror.workspace = true

# logging
tracing.workspace = true
tracing-subscriber.workspace = true

# async
tokio.workspace = true

# web framework
axum = "0.8"

# aws-sdk
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-sqs.workspace = true
serde_dynamo.workspace = true

# unique ID generation
nanoid = "0.4"
