[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
thiserror = "2"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# async
tokio = { version = "1", features = ["full"] }

#aws-sdk
aws-config = "1.8.14"
aws-sdk-dynamodb = "1"
aws-sdk-sqs = "1.94.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

# HTTP client
reqwest = "0.13.2"

# cryptography
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
