[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
# serde
serde.workspace = true
serde_json.workspace = true

# error handling
thiserror.workspace = true

# logging
tracing.workspace = true
tracing-subscriber.workspace = true

# async
tokio.workspace = true

#aws-sdk
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-sqs.workspace = true
serde_dynamo.workspace = true

# HTTP client
reqwest = "0.13"

# cryptography
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = "0.4.43"
